Started the project 02/04/24

--- a/a_1Research_and_Study/a_Domain.ipynb
+++ b/a_1Research_and_Study/a_Domain.ipynb
@@ -5,8 +5,22 @@
    "id": "527015d6-991c-4b13-9c62-a777c578c97d",
    "metadata": {},
    "source": [
-    "# Domain will be here"
+    "# ChatBot langchain CoVe"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20d08c63",
+   "metadata": {},
+   "source": [
+    "We will use NLP as domain for our project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fae82d08",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
