--- a/a_1Research_and_Study/b_Problem.ipynb
+++ b/a_1Research_and_Study/b_Problem.ipynb
@@ -5,8 +5,30 @@
    "id": "25e77a76-dc2b-48e9-80e3-ce76fb0aff67",
    "metadata": {},
    "source": [
-    "# Problem Find Out"
+    "# Challenges"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "141319d5",
+   "metadata": {},
+   "source": [
+    "Here is the list of our callenges :\n",
+    "- Limited Resource\n",
+    "- Hardware Support\n",
+    "- Version Clash\n",
+    "- LLM Api Support\n",
+    "- Running in any environment after installation\n",
+    "- Limited Access to Documentation & Blogs\n",
+    "- LLM with Large Parameters\n",
+    "- Restricted access to Hugging Face LLM "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb251eaa",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
