--- a/a_1Research_and_Study/d_ModelOption.ipynb
+++ b/a_1Research_and_Study/d_ModelOption.ipynb
@@ -7,6 +7,28 @@
    "source": [
     "# Model Option"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e31c108",
+   "metadata": {},
+   "source": [
+    "List of our Algorithm we will Try :\n",
+    "- Tokenization\n",
+    "- Word Embeddings\n",
+    "- Sequence-to-Sequence Model (Seq2Seq)\n",
+    "- Topic Modeling / Language Modeling\n",
+    "- Dependency Parsing\n",
+    "- Text Generation\n",
+    "- OpenAI\n",
+    "- HuggingFace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "469e1669",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
