--- a/a_1Research_and_Study/f_TechnologyStack.ipynb
+++ b/a_1Research_and_Study/f_TechnologyStack.ipynb
@@ -7,6 +7,25 @@
    "source": [
     "# Technology Stack"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a68e0fd0",
+   "metadata": {},
+   "source": [
+    "Our Tecnology List :\n",
+    "- OpenAI\n",
+    "- Huggingface\n",
+    "- LangChain\n",
+    "- Faiss\n",
+    "- NLTK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff51b765",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
